--- a/src/main/resources/assets/extradisks/lang/en_us.lang
+++ b/src/main/resources/assets/extradisks/lang/en_us.lang
@@ -1,1 +1,5 @@
+# Disks
 item.storage_disk.0.name=256k Storage Disk
+item.storage_disk.1.name=1024k Storage Disk
+item.storage_disk.2.name=4096k Storage Disk
+item.storage_disk.3.name=16384k Storage Disk
