--- a/src/main/resources/assets/extradisks/lang/en_us.lang
+++ b/src/main/resources/assets/extradisks/lang/en_us.lang
@@ -3,3 +3,9 @@ item.storage_disk.0.name=256k Storage Disk
 item.storage_disk.1.name=1024k Storage Disk
 item.storage_disk.2.name=4096k Storage Disk
 item.storage_disk.3.name=16384k Storage Disk
+
+# Parts
+item.storage_part.0.name=256k Storage Part
+item.storage_part.1.name=1024k Storage Part
+item.storage_part.2.name=4096k Storage Part
+item.storage_part.3.name=16384k Storage Part
